# cs350-os

./: CMakeLists.txt  build  os161kern.tgz  run
os161-1.99/: defs.mk
os161-1.99/kern/arch/mips/locore/: trap.c
os161-1.99/kern/arch/mips/syscall/: syscall.c
os161-1.99/kern/arch/mips/vm/: dumbvm.c
os161-1.99/kern/compile/ASST0/: kernel
os161-1.99/kern/include/: addrspace.h  cpu.h  proc.h  synch.h  syscall.h  test.h  thread.h
os161-1.99/kern/proc/: proc.c
os161-1.99/kern/startup/: main.c  menu.c
os161-1.99/kern/synchprobs/: traffic_synch.c
os161-1.99/kern/syscall/: proc_syscalls.c  runprogram.c
os161-1.99/kern/thread/: synch.c
os161-1.99/user/uw-testbin/argtest/: argtest.c
os161-1.99/user/uw-testbin/widefork/: widefork.c
