cmake_minimum_required(VERSION 3.6)
project(cs350_os161)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    os161-1.99/build/install/hostinclude/kern/mips/endian.h
    os161-1.99/build/install/hostinclude/kern/mips/regdefs.h
    os161-1.99/build/install/hostinclude/kern/mips/setjmp.h
    os161-1.99/build/install/hostinclude/kern/mips/signal.h
    os161-1.99/build/install/hostinclude/kern/mips/types.h
    os161-1.99/build/install/hostinclude/hostcompat.h
    os161-1.99/build/install/include/kern/mips/endian.h
    os161-1.99/build/install/include/kern/mips/regdefs.h
    os161-1.99/build/install/include/kern/mips/setjmp.h
    os161-1.99/build/install/include/kern/mips/signal.h
    os161-1.99/build/install/include/kern/mips/types.h
    os161-1.99/build/install/include/kern/endian.h
    os161-1.99/build/install/include/kern/errmsg.h
    os161-1.99/build/install/include/kern/errno.h
    os161-1.99/build/install/include/kern/fcntl.h
    os161-1.99/build/install/include/kern/ioctl.h
    os161-1.99/build/install/include/kern/iovec.h
    os161-1.99/build/install/include/kern/limits.h
    os161-1.99/build/install/include/kern/reboot.h
    os161-1.99/build/install/include/kern/resource.h
    os161-1.99/build/install/include/kern/seek.h
    os161-1.99/build/install/include/kern/sfs.h
    os161-1.99/build/install/include/kern/signal.h
    os161-1.99/build/install/include/kern/socket.h
    os161-1.99/build/install/include/kern/stat.h
    os161-1.99/build/install/include/kern/stattypes.h
    os161-1.99/build/install/include/kern/syscall.h
    os161-1.99/build/install/include/kern/time.h
    os161-1.99/build/install/include/kern/types.h
    os161-1.99/build/install/include/kern/unistd.h
    os161-1.99/build/install/include/kern/wait.h
    os161-1.99/build/install/include/sys/endian.h
    os161-1.99/build/install/include/sys/ioctl.h
    os161-1.99/build/install/include/sys/null.h
    os161-1.99/build/install/include/sys/reboot.h
    os161-1.99/build/install/include/sys/stat.h
    os161-1.99/build/install/include/sys/types.h
    os161-1.99/build/install/include/sys/wait.h
    os161-1.99/build/install/include/types/size_t.h
    os161-1.99/build/install/include/assert.h
    os161-1.99/build/install/include/err.h
    os161-1.99/build/install/include/errno.h
    os161-1.99/build/install/include/fcntl.h
    os161-1.99/build/install/include/limits.h
    os161-1.99/build/install/include/setjmp.h
    os161-1.99/build/install/include/signal.h
    os161-1.99/build/install/include/stdarg.h
    os161-1.99/build/install/include/stdint.h
    os161-1.99/build/install/include/stdio.h
    os161-1.99/build/install/include/stdlib.h
    os161-1.99/build/install/include/string.h
    os161-1.99/build/install/include/time.h
    os161-1.99/build/install/include/unistd.h
    os161-1.99/common/gcc-millicode/adddi3.c
    os161-1.99/common/gcc-millicode/anddi3.c
    os161-1.99/common/gcc-millicode/ashldi3.c
    os161-1.99/common/gcc-millicode/ashrdi3.c
    os161-1.99/common/gcc-millicode/cmpdi2.c
    os161-1.99/common/gcc-millicode/divdi3.c
    os161-1.99/common/gcc-millicode/iordi3.c
    os161-1.99/common/gcc-millicode/longlong.h
    os161-1.99/common/gcc-millicode/lshldi3.c
    os161-1.99/common/gcc-millicode/lshrdi3.c
    os161-1.99/common/gcc-millicode/moddi3.c
    os161-1.99/common/gcc-millicode/muldi3.c
    os161-1.99/common/gcc-millicode/negdi2.c
    os161-1.99/common/gcc-millicode/notdi2.c
    os161-1.99/common/gcc-millicode/qdivrem.c
    os161-1.99/common/gcc-millicode/subdi3.c
    os161-1.99/common/gcc-millicode/ucmpdi2.c
    os161-1.99/common/gcc-millicode/udivdi3.c
    os161-1.99/common/gcc-millicode/umoddi3.c
    os161-1.99/common/gcc-millicode/xordi3.c
    os161-1.99/common/libc/printf/__printf.c
    os161-1.99/common/libc/printf/snprintf.c
    os161-1.99/common/libc/stdlib/atoi.c
    os161-1.99/common/libc/string/bzero.c
    os161-1.99/common/libc/string/memcpy.c
    os161-1.99/common/libc/string/memmove.c
    os161-1.99/common/libc/string/strcat.c
    os161-1.99/common/libc/string/strchr.c
    os161-1.99/common/libc/string/strcmp.c
    os161-1.99/common/libc/string/strcpy.c
    os161-1.99/common/libc/string/strlen.c
    os161-1.99/common/libc/string/strrchr.c
    os161-1.99/common/libc/string/strtok_r.c
    os161-1.99/kern/arch/mips/include/kern/endian.h
    os161-1.99/kern/arch/mips/include/kern/regdefs.h
    os161-1.99/kern/arch/mips/include/kern/setjmp.h
    os161-1.99/kern/arch/mips/include/kern/signal.h
    os161-1.99/kern/arch/mips/include/kern/types.h
    os161-1.99/kern/arch/mips/include/current.h
    os161-1.99/kern/arch/mips/include/elf.h
    os161-1.99/kern/arch/mips/include/specialreg.h
    os161-1.99/kern/arch/mips/include/spinlock.h
    os161-1.99/kern/arch/mips/include/thread.h
    os161-1.99/kern/arch/mips/include/tlb.h
    os161-1.99/kern/arch/mips/include/trapframe.h
    os161-1.99/kern/arch/mips/include/types.h
    os161-1.99/kern/arch/mips/include/vm.h
    os161-1.99/kern/arch/mips/locore/trap.c
    os161-1.99/kern/arch/mips/syscall/syscall.c
    os161-1.99/kern/arch/mips/thread/cpu.c
    os161-1.99/kern/arch/mips/thread/switchframe.c
    os161-1.99/kern/arch/mips/thread/switchframe.h
    os161-1.99/kern/arch/mips/thread/thread_machdep.c
    os161-1.99/kern/arch/mips/vm/dumbvm.c
    os161-1.99/kern/arch/mips/vm/ram.c
    os161-1.99/kern/arch/sys161/dev/lamebus_machdep.c
    os161-1.99/kern/arch/sys161/include/bus.h
    os161-1.99/kern/arch/sys161/include/maxcpus.h
    os161-1.99/kern/compile/ASST0/includelinks/machine/kern/endian.h
    os161-1.99/kern/compile/ASST0/includelinks/machine/kern/regdefs.h
    os161-1.99/kern/compile/ASST0/includelinks/machine/kern/setjmp.h
    os161-1.99/kern/compile/ASST0/includelinks/machine/kern/signal.h
    os161-1.99/kern/compile/ASST0/includelinks/machine/kern/types.h
    os161-1.99/kern/compile/ASST0/includelinks/mips/kern/endian.h
    os161-1.99/kern/compile/ASST0/includelinks/mips/kern/regdefs.h
    os161-1.99/kern/compile/ASST0/includelinks/mips/kern/setjmp.h
    os161-1.99/kern/compile/ASST0/includelinks/mips/kern/signal.h
    os161-1.99/kern/compile/ASST0/includelinks/mips/kern/types.h
    os161-1.99/kern/compile/ASST0/autoconf.c
    os161-1.99/kern/compile/ASST0/autoconf.h
    os161-1.99/kern/compile/ASST0/opt-A0.h
    os161-1.99/kern/compile/ASST0/opt-A1.h
    os161-1.99/kern/compile/ASST0/opt-A2.h
    os161-1.99/kern/compile/ASST0/opt-A3.h
    os161-1.99/kern/compile/ASST0/opt-A4.h
    os161-1.99/kern/compile/ASST0/opt-A5.h
    os161-1.99/kern/compile/ASST0/opt-dumbvm.h
    os161-1.99/kern/compile/ASST0/opt-net.h
    os161-1.99/kern/compile/ASST0/opt-netfs.h
    os161-1.99/kern/compile/ASST0/opt-noasserts.h
    os161-1.99/kern/compile/ASST0/opt-sfs.h
    os161-1.99/kern/compile/ASST0/opt-synchprobs.h
    os161-1.99/kern/compile/ASST0/vers.c
    os161-1.99/kern/dev/generic/beep.c
    os161-1.99/kern/dev/generic/beep.h
    os161-1.99/kern/dev/generic/console.c
    os161-1.99/kern/dev/generic/console.h
    os161-1.99/kern/dev/generic/random.c
    os161-1.99/kern/dev/generic/random.h
    os161-1.99/kern/dev/generic/rtclock.c
    os161-1.99/kern/dev/generic/rtclock.h
    os161-1.99/kern/dev/lamebus/beep_ltimer.c
    os161-1.99/kern/dev/lamebus/con_lscreen.c
    os161-1.99/kern/dev/lamebus/con_lser.c
    os161-1.99/kern/dev/lamebus/emu.c
    os161-1.99/kern/dev/lamebus/emu.h
    os161-1.99/kern/dev/lamebus/emu_att.c
    os161-1.99/kern/dev/lamebus/lamebus.c
    os161-1.99/kern/dev/lamebus/lamebus.h
    os161-1.99/kern/dev/lamebus/lhd.c
    os161-1.99/kern/dev/lamebus/lhd.h
    os161-1.99/kern/dev/lamebus/lhd_att.c
    os161-1.99/kern/dev/lamebus/lnet.c
    os161-1.99/kern/dev/lamebus/lnet_att.c
    os161-1.99/kern/dev/lamebus/lrandom.c
    os161-1.99/kern/dev/lamebus/lrandom.h
    os161-1.99/kern/dev/lamebus/lrandom_att.c
    os161-1.99/kern/dev/lamebus/lscreen.c
    os161-1.99/kern/dev/lamebus/lscreen.h
    os161-1.99/kern/dev/lamebus/lscreen_att.c
    os161-1.99/kern/dev/lamebus/lser.c
    os161-1.99/kern/dev/lamebus/lser.h
    os161-1.99/kern/dev/lamebus/lser_att.c
    os161-1.99/kern/dev/lamebus/ltimer.c
    os161-1.99/kern/dev/lamebus/ltimer.h
    os161-1.99/kern/dev/lamebus/ltimer_att.c
    os161-1.99/kern/dev/lamebus/ltrace.c
    os161-1.99/kern/dev/lamebus/ltrace.h
    os161-1.99/kern/dev/lamebus/ltrace_att.c
    os161-1.99/kern/dev/lamebus/random_lrandom.c
    os161-1.99/kern/dev/lamebus/rtclock_ltimer.c
    os161-1.99/kern/fs/sfs/sfs_fs.c
    os161-1.99/kern/fs/sfs/sfs_io.c
    os161-1.99/kern/fs/sfs/sfs_vnode.c
    os161-1.99/kern/include/kern/endian.h
    os161-1.99/kern/include/kern/errmsg.h
    os161-1.99/kern/include/kern/errno.h
    os161-1.99/kern/include/kern/fcntl.h
    os161-1.99/kern/include/kern/ioctl.h
    os161-1.99/kern/include/kern/iovec.h
    os161-1.99/kern/include/kern/limits.h
    os161-1.99/kern/include/kern/reboot.h
    os161-1.99/kern/include/kern/resource.h
    os161-1.99/kern/include/kern/seek.h
    os161-1.99/kern/include/kern/sfs.h
    os161-1.99/kern/include/kern/signal.h
    os161-1.99/kern/include/kern/socket.h
    os161-1.99/kern/include/kern/stat.h
    os161-1.99/kern/include/kern/stattypes.h
    os161-1.99/kern/include/kern/syscall.h
    os161-1.99/kern/include/kern/time.h
    os161-1.99/kern/include/kern/types.h
    os161-1.99/kern/include/kern/unistd.h
    os161-1.99/kern/include/kern/wait.h
    os161-1.99/kern/include/addrspace.h
    os161-1.99/kern/include/array.h
    os161-1.99/kern/include/bitmap.h
    os161-1.99/kern/include/cdefs.h
    os161-1.99/kern/include/clock.h
    os161-1.99/kern/include/copyinout.h
    os161-1.99/kern/include/cpu.h
    os161-1.99/kern/include/current.h
    os161-1.99/kern/include/device.h
    os161-1.99/kern/include/elf.h
    os161-1.99/kern/include/emufs.h
    os161-1.99/kern/include/endian.h
    os161-1.99/kern/include/fs.h
    os161-1.99/kern/include/lib.h
    os161-1.99/kern/include/limits.h
    os161-1.99/kern/include/mainbus.h
    os161-1.99/kern/include/proc.h
    os161-1.99/kern/include/queue.h
    os161-1.99/kern/include/setjmp.h
    os161-1.99/kern/include/sfs.h
    os161-1.99/kern/include/signal.h
    os161-1.99/kern/include/spinlock.h
    os161-1.99/kern/include/spl.h
    os161-1.99/kern/include/stat.h
    os161-1.99/kern/include/stdarg.h
    os161-1.99/kern/include/synch.h
    os161-1.99/kern/include/synchprobs.h
    os161-1.99/kern/include/syscall.h
    os161-1.99/kern/include/test.h
    os161-1.99/kern/include/thread.h
    os161-1.99/kern/include/threadlist.h
    os161-1.99/kern/include/threadprivate.h
    os161-1.99/kern/include/types.h
    os161-1.99/kern/include/uio.h
    os161-1.99/kern/include/uw-vmstats.h
    os161-1.99/kern/include/version.h
    os161-1.99/kern/include/vfs.h
    os161-1.99/kern/include/vm.h
    os161-1.99/kern/include/vnode.h
    os161-1.99/kern/include/wchan.h
    os161-1.99/kern/lib/array.c
    os161-1.99/kern/lib/bitmap.c
    os161-1.99/kern/lib/bswap.c
    os161-1.99/kern/lib/kgets.c
    os161-1.99/kern/lib/kprintf.c
    os161-1.99/kern/lib/misc.c
    os161-1.99/kern/lib/queue.c
    os161-1.99/kern/lib/uio.c
    os161-1.99/kern/proc/proc.c
    os161-1.99/kern/startup/main.c
    os161-1.99/kern/startup/menu.c
    os161-1.99/kern/synchprobs/catmouse.c
    os161-1.99/kern/synchprobs/catmouse_synch.c
    os161-1.99/kern/synchprobs/traffic.c
    os161-1.99/kern/synchprobs/traffic_synch.c
    os161-1.99/kern/synchprobs/whalemating.c
    os161-1.99/kern/syscall/file_syscalls.c
    os161-1.99/kern/syscall/loadelf.c
    os161-1.99/kern/syscall/proc_syscalls.c
    os161-1.99/kern/syscall/runprogram.c
    os161-1.99/kern/syscall/time_syscalls.c
    os161-1.99/kern/test/arraytest.c
    os161-1.99/kern/test/bitmaptest.c
    os161-1.99/kern/test/fstest.c
    os161-1.99/kern/test/malloctest.c
    os161-1.99/kern/test/nettest.c
    os161-1.99/kern/test/synchtest.c
    os161-1.99/kern/test/threadtest.c
    os161-1.99/kern/test/tt3.c
    os161-1.99/kern/test/uw-tests.c
    os161-1.99/kern/thread/clock.c
    os161-1.99/kern/thread/spinlock.c
    os161-1.99/kern/thread/spl.c
    os161-1.99/kern/thread/synch.c
    os161-1.99/kern/thread/thread.c
    os161-1.99/kern/thread/threadlist.c
    os161-1.99/kern/vfs/device.c
    os161-1.99/kern/vfs/devnull.c
    os161-1.99/kern/vfs/vfscwd.c
    os161-1.99/kern/vfs/vfslist.c
    os161-1.99/kern/vfs/vfslookup.c
    os161-1.99/kern/vfs/vfspath.c
    os161-1.99/kern/vfs/vnode.c
    os161-1.99/kern/vm/copyinout.c
    os161-1.99/kern/vm/kmalloc.c
    os161-1.99/kern/vm/uw-vmstats.c
    os161-1.99/user/bin/cat/cat.c
    os161-1.99/user/bin/cp/cp.c
    os161-1.99/user/bin/false/false.c
    os161-1.99/user/bin/ln/ln.c
    os161-1.99/user/bin/ls/ls.c
    os161-1.99/user/bin/mkdir/mkdir.c
    os161-1.99/user/bin/mv/mv.c
    os161-1.99/user/bin/pwd/pwd.c
    os161-1.99/user/bin/rm/rm.c
    os161-1.99/user/bin/rmdir/rmdir.c
    os161-1.99/user/bin/sh/sh.c
    os161-1.99/user/bin/sync/sync.c
    os161-1.99/user/bin/true/true.c
    os161-1.99/user/include/sys/endian.h
    os161-1.99/user/include/sys/ioctl.h
    os161-1.99/user/include/sys/null.h
    os161-1.99/user/include/sys/reboot.h
    os161-1.99/user/include/sys/stat.h
    os161-1.99/user/include/sys/types.h
    os161-1.99/user/include/sys/wait.h
    os161-1.99/user/include/types/size_t.h
    os161-1.99/user/include/assert.h
    os161-1.99/user/include/err.h
    os161-1.99/user/include/errno.h
    os161-1.99/user/include/fcntl.h
    os161-1.99/user/include/limits.h
    os161-1.99/user/include/setjmp.h
    os161-1.99/user/include/signal.h
    os161-1.99/user/include/stdarg.h
    os161-1.99/user/include/stdint.h
    os161-1.99/user/include/stdio.h
    os161-1.99/user/include/stdlib.h
    os161-1.99/user/include/string.h
    os161-1.99/user/include/time.h
    os161-1.99/user/include/unistd.h
    os161-1.99/user/lib/hostcompat/err.c
    os161-1.99/user/lib/hostcompat/host-err.h
    os161-1.99/user/lib/hostcompat/hostcompat.c
    os161-1.99/user/lib/hostcompat/hostcompat.h
    os161-1.99/user/lib/hostcompat/time.c
    os161-1.99/user/lib/libc/stdio/__puts.c
    os161-1.99/user/lib/libc/stdio/getchar.c
    os161-1.99/user/lib/libc/stdio/printf.c
    os161-1.99/user/lib/libc/stdio/putchar.c
    os161-1.99/user/lib/libc/stdio/puts.c
    os161-1.99/user/lib/libc/stdlib/abort.c
    os161-1.99/user/lib/libc/stdlib/exit.c
    os161-1.99/user/lib/libc/stdlib/malloc.c
    os161-1.99/user/lib/libc/stdlib/random.c
    os161-1.99/user/lib/libc/stdlib/system.c
    os161-1.99/user/lib/libc/string/memcmp.c
    os161-1.99/user/lib/libc/string/memset.c
    os161-1.99/user/lib/libc/string/strerror.c
    os161-1.99/user/lib/libc/string/strtok.c
    os161-1.99/user/lib/libc/time/time.c
    os161-1.99/user/lib/libc/unix/__assert.c
    os161-1.99/user/lib/libc/unix/err.c
    os161-1.99/user/lib/libc/unix/errno.c
    os161-1.99/user/lib/libc/unix/getcwd.c
    os161-1.99/user/my-testbin/example/example.c
    os161-1.99/user/sbin/dumpsfs/dumpsfs.c
    os161-1.99/user/sbin/halt/halt.c
    os161-1.99/user/sbin/mksfs/disk.c
    os161-1.99/user/sbin/mksfs/disk.h
    os161-1.99/user/sbin/mksfs/mksfs.c
    os161-1.99/user/sbin/mksfs/support.c
    os161-1.99/user/sbin/mksfs/support.h
    os161-1.99/user/sbin/poweroff/poweroff.c
    os161-1.99/user/sbin/reboot/reboot.c
    os161-1.99/user/sbin/sfsck/sfsck.c
    os161-1.99/user/testbin/add/add.c
    os161-1.99/user/testbin/argtest/argtest.c
    os161-1.99/user/testbin/badcall/bad_chdir.c
    os161-1.99/user/testbin/badcall/bad_close.c
    os161-1.99/user/testbin/badcall/bad_dup2.c
    os161-1.99/user/testbin/badcall/bad_execv.c
    os161-1.99/user/testbin/badcall/bad_fsync.c
    os161-1.99/user/testbin/badcall/bad_ftruncate.c
    os161-1.99/user/testbin/badcall/bad_getcwd.c
    os161-1.99/user/testbin/badcall/bad_getdirentry.c
    os161-1.99/user/testbin/badcall/bad_ioctl.c
    os161-1.99/user/testbin/badcall/bad_link.c
    os161-1.99/user/testbin/badcall/bad_lseek.c
    os161-1.99/user/testbin/badcall/bad_mkdir.c
    os161-1.99/user/testbin/badcall/bad_open.c
    os161-1.99/user/testbin/badcall/bad_pipe.c
    os161-1.99/user/testbin/badcall/bad_read.c
    os161-1.99/user/testbin/badcall/bad_readlink.c
    os161-1.99/user/testbin/badcall/bad_reboot.c
    os161-1.99/user/testbin/badcall/bad_remove.c
    os161-1.99/user/testbin/badcall/bad_rename.c
    os161-1.99/user/testbin/badcall/bad_rmdir.c
    os161-1.99/user/testbin/badcall/bad_sbrk.c
    os161-1.99/user/testbin/badcall/bad_stat.c
    os161-1.99/user/testbin/badcall/bad_symlink.c
    os161-1.99/user/testbin/badcall/bad_time.c
    os161-1.99/user/testbin/badcall/bad_waitpid.c
    os161-1.99/user/testbin/badcall/bad_write.c
    os161-1.99/user/testbin/badcall/common_buf.c
    os161-1.99/user/testbin/badcall/common_fds.c
    os161-1.99/user/testbin/badcall/common_path.c
    os161-1.99/user/testbin/badcall/config.h
    os161-1.99/user/testbin/badcall/driver.c
    os161-1.99/user/testbin/badcall/test.h
    os161-1.99/user/testbin/bigfile/bigfile.c
    os161-1.99/user/testbin/conman/conman.c
    os161-1.99/user/testbin/crash/crash.c
    os161-1.99/user/testbin/ctest/ctest.c
    os161-1.99/user/testbin/dirconc/dirconc.c
    os161-1.99/user/testbin/dirseek/dirseek.c
    os161-1.99/user/testbin/dirtest/dirtest.c
    os161-1.99/user/testbin/f_test/f_hdr.h
    os161-1.99/user/testbin/f_test/f_read.c
    os161-1.99/user/testbin/f_test/f_test.c
    os161-1.99/user/testbin/f_test/f_write.c
    os161-1.99/user/testbin/farm/farm.c
    os161-1.99/user/testbin/faulter/faulter.c
    os161-1.99/user/testbin/filetest/filetest.c
    os161-1.99/user/testbin/forkbomb/forkbomb.c
    os161-1.99/user/testbin/forktest/forktest.c
    os161-1.99/user/testbin/guzzle/guzzle.c
    os161-1.99/user/testbin/hash/hash.c
    os161-1.99/user/testbin/hog/hog.c
    os161-1.99/user/testbin/huge/huge.c
    os161-1.99/user/testbin/kitchen/kitchen.c
    os161-1.99/user/testbin/malloctest/malloctest.c
    os161-1.99/user/testbin/matmult/matmult-orig.c
    os161-1.99/user/testbin/matmult/matmult.c
    os161-1.99/user/testbin/palin/palin.c
    os161-1.99/user/testbin/parallelvm/parallelvm.c
    os161-1.99/user/testbin/psort/psort.c
    os161-1.99/user/testbin/randcall/calls.c
    os161-1.99/user/testbin/randcall/extern.h
    os161-1.99/user/testbin/randcall/main.c
    os161-1.99/user/testbin/rmdirtest/rmdirtest.c
    os161-1.99/user/testbin/rmtest/rmtest.c
    os161-1.99/user/testbin/sink/sink.c
    os161-1.99/user/testbin/sort/sort.c
    os161-1.99/user/testbin/sty/sty.c
    os161-1.99/user/testbin/tail/tail.c
    os161-1.99/user/testbin/tictac/tictac.c
    os161-1.99/user/testbin/triplehuge/triple.c
    os161-1.99/user/testbin/triplehuge/triple.h
    os161-1.99/user/testbin/triplehuge/triplehuge.c
    os161-1.99/user/testbin/triplemat/triple.c
    os161-1.99/user/testbin/triplemat/triple.h
    os161-1.99/user/testbin/triplemat/triplemat.c
    os161-1.99/user/testbin/triplesort/triple.c
    os161-1.99/user/testbin/triplesort/triple.h
    os161-1.99/user/testbin/triplesort/triplesort.c
    os161-1.99/user/testbin/userthreads/userthreads.c
    os161-1.99/user/testbin/zero/zero.c
    os161-1.99/user/uw-testbin/argtest/argtest.c
    os161-1.99/user/uw-testbin/argtesttest/argtesttest.c
    os161-1.99/user/uw-testbin/conc-io/conc-io.c
    os161-1.99/user/uw-testbin/exec-sparse/exec-sparse.c
    os161-1.99/user/uw-testbin/files1/files1.c
    os161-1.99/user/uw-testbin/files2/files2.c
    os161-1.99/user/uw-testbin/hogparty/hogparty.c
    os161-1.99/user/uw-testbin/lib/testutils.c
    os161-1.99/user/uw-testbin/lib/testutils.h
    os161-1.99/user/uw-testbin/onefork/onefork.c
    os161-1.99/user/uw-testbin/pidcheck/pidcheck.c
    os161-1.99/user/uw-testbin/romemwrite/romemwrite.c
    os161-1.99/user/uw-testbin/segments/segments.c
    os161-1.99/user/uw-testbin/sparse/sparse.c
    os161-1.99/user/uw-testbin/syscall/syscall.c
    os161-1.99/user/uw-testbin/tlbfaulter/tlbfaulter.c
    os161-1.99/user/uw-testbin/vm-crash1/vm-crash1.c
    os161-1.99/user/uw-testbin/vm-crash2/vm-crash2.c
    os161-1.99/user/uw-testbin/vm-crash3/vm-crash3.c
    os161-1.99/user/uw-testbin/vm-data1/vm-data1.c
    os161-1.99/user/uw-testbin/vm-data2/vm-data2.c
    os161-1.99/user/uw-testbin/vm-data3/vm-data3.c
    os161-1.99/user/uw-testbin/vm-funcs/vm-funcs.c
    os161-1.99/user/uw-testbin/vm-mix1/vm-mix1.c
    os161-1.99/user/uw-testbin/vm-mix1-exec/vm-mix1-exec.c
    os161-1.99/user/uw-testbin/vm-mix1-fork/vm-mix1-fork.c
    os161-1.99/user/uw-testbin/vm-mix2/vm-mix2.c
    os161-1.99/user/uw-testbin/vm-stack1/vm-stack1.c
    os161-1.99/user/uw-testbin/vm-stack2/vm-stack2.c
    os161-1.99/user/uw-testbin/vm-stackgrow/vm-stackgrow.c
    os161-1.99/user/uw-testbin/widefork/widefork.c
    os161-1.99/user/uw-testbin/writeread/writeread.c
    os161-1.99/user/uw-testbin/xhog/xhog.c
    os161-1.99/user/uw-testbin/yhog/yhog.c
    os161-1.99/user/uw-testbin/zhog/zhog.c
    root/hostinclude/kern/mips/endian.h
    root/hostinclude/kern/mips/regdefs.h
    root/hostinclude/kern/mips/setjmp.h
    root/hostinclude/kern/mips/signal.h
    root/hostinclude/kern/mips/types.h
    root/hostinclude/hostcompat.h
    root/include/kern/mips/endian.h
    root/include/kern/mips/regdefs.h
    root/include/kern/mips/setjmp.h
    root/include/kern/mips/signal.h
    root/include/kern/mips/types.h
    root/include/kern/endian.h
    root/include/kern/errmsg.h
    root/include/kern/errno.h
    root/include/kern/fcntl.h
    root/include/kern/ioctl.h
    root/include/kern/iovec.h
    root/include/kern/limits.h
    root/include/kern/reboot.h
    root/include/kern/resource.h
    root/include/kern/seek.h
    root/include/kern/sfs.h
    root/include/kern/signal.h
    root/include/kern/socket.h
    root/include/kern/stat.h
    root/include/kern/stattypes.h
    root/include/kern/syscall.h
    root/include/kern/time.h
    root/include/kern/types.h
    root/include/kern/unistd.h
    root/include/kern/wait.h
    root/include/sys/endian.h
    root/include/sys/ioctl.h
    root/include/sys/null.h
    root/include/sys/reboot.h
    root/include/sys/stat.h
    root/include/sys/types.h
    root/include/sys/wait.h
    root/include/types/size_t.h
    root/include/assert.h
    root/include/err.h
    root/include/errno.h
    root/include/fcntl.h
    root/include/limits.h
    root/include/setjmp.h
    root/include/signal.h
    root/include/stdarg.h
    root/include/stdint.h
    root/include/stdio.h
    root/include/stdlib.h
    root/include/string.h
    root/include/time.h
    root/include/unistd.h)

include_directories( /User/ED/cs350-os161/os161-1.99/kern )
include_directories( )

add_executable(cs350_os161 ${SOURCE_FILES})